cargo-features = ["named-profiles"]

[package]
name = "three_body_lang"
description = "Three Body Language written in Rust"
version = "0.0.4"
authors = ["meloalright", "rustq"]
license = "MIT"

[dependencies]
rustyline = { version = "8.0.0", optional = true }
rustyline-derive = { version = "0.4.0", optional = true }
unicode-xid = { version = "0.2.1" }
unicode-normalization = "0.1.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = { version = "0.7.3", features = ["getrandom"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.7.3" }

[[bin]]
name = "runtime"
path = "src/bin/main.rs"
required-features = ["binaries"]

[[bin]]
name = "wasm"
path = "src/wasm/main.rs"

[features]
binaries = ["rustyline", "rustyline-derive"]
wasm = []

[profile.release]
lto = true

[profile.tiny]
inherits = 'release'
opt-level = 'z'

[profile.tiny.build-override]
opt-level = 'z'
