[package]
name = "three_body_lang"
description = "Three Body Language written in Rust"
edition = "2021"
version = "0.4.5"
authors = ["meloalright", "rustq"]
license = "MIT"

[workspace]
members = ["interpreter"]

[dependencies]
rustyline = { version = "12.0.0", optional = true }
rustyline-derive = { version = "0.4.0", optional = true }
three_body_interpreter = { version = "0.4.5", path = "./interpreter", features = ["sophon"] }

[[bin]]
name = "3body"
path = "src/bin/repl/mod.rs"
required-features = ["repl"]

[features]
default = ["repl"]
repl = ["rustyline", "rustyline-derive"]