[package]
name = "three_body_interpreter"
description = "Three Body interpreter"
version = "0.6.3"
edition = "2021"
authors = ["meloalright", "rustq"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-xid = { version = "0.2.1" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.8.5" }

llm = { version = "0.1.1", optional = true }
llm-base = { version = "0.1.1", optional = true }
spinoff = { version = "0.7.0", default-features = false, features = ["dots", "arc", "line"], optional = true }
tokio = { version = "1.40.0", features = ["sync", "time", "macros", "rt-multi-thread"], optional = true }

[features]
default = []
sophon = ["llm", "llm-base", "spinoff"]
threading = ["tokio"]