[package]
name = "three_body_e2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "12.0.0", optional = true }
unicode-xid = { version = "0.2.1" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.7.3" }

[[bin]]
name = "3body"
path = "src/bin/main.rs"
required-features = ["repl"]

[features]
default = ["repl"]
repl = ["rustyline"]
wasm = []